edited the routes and alos added some features in the frontend as well
